# Basic_Cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exes/: dsumsub
include/: sub.h
src/: dsumsub.cpp  sub.cpp  sum.cpp
