# Specify the minimum version for CMake

cmake_minimum_required(VERSION 2.8)

# Project's name

project(hello)
# Set the output folder where your program will be created
set(CMAKE_SOURCE_DIR src)
set(CMAKE_BINARY_DIR exes)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH libs)

# The following folder will be included
include_directories(include)

add_library(sumsub ${CMAKE_SOURCE_DIR}/sum.cpp ${CMAKE_SOURCE_DIR}/sub.cpp)
add_executable(dsumsub ${CMAKE_SOURCE_DIR}/dsumsub.cpp)
target_link_libraries(dsumsub sumsub)
